<resources>
    <string name="app_name">My Notes</string>

    <string name="notes">NOTES</string>
    <string name="menu">MENU</string>
    <string name="add">ADD</string>
    <string name="title">Title</string>
    <string name="rgb">rgb</string>
    <string name="rgb_code">230, 140, 225</string>
    <string name="hex">hex</string>
    <string name="hex_code">#F8C3A9</string>
    <string name="add_note_text">Add note text</string>
    <string name="add_note_list">Add note list</string>
    <string name="my_note">My note</string>
    <string name="list_item_type">List Item type</string>
    <string name="delete_list_item">Delete list item</string>
    <string name="list_item">list item…</string>
    <string name="save">SAVE</string>
    <string name="delete_confirmation">Delete confirmation</string>
    <string name="download_txt">Download .txt</string>

    <string name="settings">Settings</string>
    <string name="dark_light_mode">dark/light mode</string>
    <string name="about">about</string>
    <string name="back">back</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="about_camel">About</string>
    <string name="about_text">The app was made using Android Studio (Java), the data are stored locally for privacy using sqlite database (room library).\n\nTips:\n\tIf you want to delete the app, download the notes in text format.\n\tUse backup function before clearing the application data and restore your notes when needed.\n\tYou can have multiple backup instances, group your notes as you please.</string>

    <string name="digitsFilter">0123456789./*-+=_)(*^%$#@~`!&amp; qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM\|;:\'"/?</string>
    <string name="digitsColorFilter">0123456789,#abcdefABCDEF</string>
    <string name="colors">colors</string>
    <string name="purple">purple</string>
    <string name="yellow">yellow</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="red">red</string>

</resources>