<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/IBListType"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/list_item_type"
            android:src="@drawable/check_vector" />

        <EditText
            android:id="@+id/ETAddListItemText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/IBDeleteAddListItem"
            android:layout_toEndOf="@id/IBListType"
            android:digits="@string/digitsFilter"
            android:hint="@string/list_item"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/IBDeleteAddListItem"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/delete_list_item"
            android:src="@drawable/delete_forever_vector" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>