<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FLViewAndEditContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect"
    tools:context=".ViewAndEditFragment">

    <RelativeLayout
        android:id="@+id/RLEditWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <include
            android:id="@+id/ITopBar"
            layout="@layout/top_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/BSaveEdit"
            android:layout_below="@+id/ITopBar"
            android:paddingHorizontal="16dp">

            <RelativeLayout
                android:id="@+id/RLEditBodyWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <EditText
                    android:id="@+id/ETEditTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/round_corners"
                    android:gravity="center_vertical"
                    android:hint="@string/title"
                    android:paddingHorizontal="12dp"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/ETEditColor"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/ETEditTitle"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_toStartOf="@id/TBEditRgbHex"
                    android:background="@drawable/round_corners"
                    android:gravity="center_vertical"
                    android:hint="@string/rgb_code"
                    android:paddingHorizontal="12dp"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/LLColorsPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@id/ETEditTitle"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/TBEditRgbHex"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageButton
                        android:id="@+id/IBColorRed"
                        style="@style/redBGColor"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@drawable/rect"
                        android:contentDescription="@string/red"
                        app:tint="@color/primaryBG" />

                    <ImageButton
                        android:id="@+id/IBColorGreen"
                        style="@style/greenBGColor"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@drawable/rect"
                        android:backgroundTint="@color/red"
                        android:contentDescription="@string/green"
                        app:tint="@color/primaryBG" />

                    <ImageButton
                        android:id="@+id/IBColorBlue"
                        style="@style/blueBGColor"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@drawable/rect"
                        android:backgroundTint="@color/yellow"
                        android:contentDescription="@string/blue"
                        app:tint="@color/primaryBG" />

                    <ImageButton
                        android:id="@+id/IBColorYellow"
                        style="@style/yellowBGColor"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@drawable/rect"
                        android:backgroundTint="@color/blue"
                        android:contentDescription="@string/yellow"
                        app:tint="@color/primaryBG" />

                    <ImageButton
                        android:id="@+id/IBColorPurple"
                        style="@style/purpleBGColor"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@drawable/rect"
                        android:contentDescription="@string/purple"
                        app:tint="@color/primaryBG" />
                </LinearLayout>

                <Button
                    android:id="@+id/TBEditRgbHex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ETEditTitle"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round_corners"
                    android:elevation="12dp"
                    android:gravity="center"
                    android:text="@string/rgb"/>

                <EditText
                    android:id="@+id/ETEditNoteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TBEditRgbHex"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round_corners"
                    android:gravity="start|top"
                    android:hint="@string/my_note"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="24dp"
                    android:text="" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/ETEditNoteText"
                    android:layout_marginTop="12dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/RVEditNoteList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:id="@+id/IBEditAddListItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/RVEditNoteList"
                            android:layout_centerInParent="true"
                            android:layout_margin="8dp"
                            android:background="@drawable/circle"
                            android:contentDescription="@string/add_note_list"
                            android:src="@drawable/add_vector"
                            app:shapeAppearance="@drawable/circle" />
                    </RelativeLayout>
                </ScrollView>
            </RelativeLayout>
        </ScrollView>

        <Button
            android:id="@+id/BSaveEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="64dp"
            android:text="@string/save"
            android:textSize="18sp"
            android:background="@drawable/round_corners"/>
    </RelativeLayout>

</FrameLayout>